--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                                 <span class="ce-label ce-minutes-label"></span>
                             </div>
                         </div>
-                        <!-- <div class="ce-circle">
+                        <div class="ce-circle">
                             <canvas id="ce-seconds" width="408" height="408"></canvas>
                             <div class="ce-circle__values">
                                 <span class="ce-digit ce-seconds"></span>
                                 <span class="ce-label ce-seconds-label"></span>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div> 
                 <div class="main-btn">
